--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
       "dest": "/api/menu.js"
     },
     {
+      "src": "/api/config",
+      "dest": "/api/config.js"
+    },
+    {
       "src": "/",
       "dest": "/public/index.html"
     }
